--- a/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- RUNIQUE PASSWORD TEXT FIELD -->
     <string name="show_password">Show password</string>
     <string name="hide_password">Hide password</string>
+    <!-- RUNIQUE TOP APP BAR -->
+    <string name="go_back">Go back</string>
+    <string name="open_menu">Open menu</string>
 </resources>
