--- a/run/presentation/src/main/res/values/strings.xml
+++ b/run/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- RUN OVERVIEW -->
     <string name="runique">Runique</string>
     <string name="analytics">Analytics</string>
     <string name="logout">Logout</string>
+
+    <!-- ACTIVE RUN -->
+    <string name="active_run">Active Run</string>
+    <string name="pause_run">Pause run</string>
+    <string name="start_run">Start run</string>
+    <string name="duration">Duration</string>
+    <string name="distance">Distance</string>
+    <string name="pace">Pace</string>
 </resources>
